--- a/1_intro/Euler_intro.ipynb
+++ b/1_intro/Euler_intro.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "graphic-baseline",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a24cce1117644a8cb4cf72a43b9ee1ea",
+       "model_id": "d007ce5166624a27a7ddd611b44b1edb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -26,7 +26,7 @@
        "<function __main__.plot_func(dx)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,14 +34,7 @@
    "source": [
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "#from matplotlib import rc\n",
-    "#rc('animation', html='jshtml')\n",
-    "#import matplotlib.pyplot as plt\n",
-    "#from matplotlib.animation import FuncAnimation\n",
     "import numpy as np\n",
     "\n",
     "def plot_func(dx):\n",
@@ -67,19 +60,23 @@
     "    #t = np.arange(steps)*dt\n",
     "\n",
     "    # Numerische Integration\n",
-    "    for i in range(1,N):    \n",
+    "    for i in range(0,N-1):    \n",
     "        # Berechnung von f(x_n)\n",
-    "        f = -l * y[i-1]\n",
+    "        f = -l * y[i]\n",
     "        # Schrittweise Integration von Stützstelle zu Stützstelle\n",
-    "        y[i] = y[i-1] + dx * f\n",
+    "        y[i+1] = y[i] + dx * f\n",
     "\n",
-    "    plt.plot(x, y,marker=11, label=\"Euler dx=\"+str(dx))\n",
+    "    plt.rcParams['font.size'] = '16'\n",
+    "    \n",
+    "    plt.plot(x, y, \"red\", marker=9, label=\"Euler dx=\"+str(dx))\n",
     "    \n",
     "    #Numerically evaluate exact analytic solution\n",
     "    x_exact = np.linspace(0, xmax, 1000)\n",
     "    y_exact = np.exp(-l*x_exact)\n",
     "    plt.plot(x_exact, y_exact,\"black\",label=\"Exact\")\n",
     "\n",
+    "    plt.xlabel('x')\n",
+    "    plt.ylabel('y(x)')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
